# MLP

./: .gitignore  CMakeLists.txt  README.md  setup.py
scripts/: make_HMC_training_data.py  make_gaussian_training_data.py
src/: CrossValidation.py  __init__.py  train.py
src/Activations/: Exponential.py  Logarithm.py  PhaseActivation.py  PhaseAmplitude.py  Sigmoid.py  Softplus.py  SplitActivation.py  __init__.py
src/ComplexifyTorch/: __init__.py  angle.py  cadd.cpp  cmatmul.cpp  cmv.cpp  impl.py  linalg.hpp  linalg.py
src/DataHandling/: dataset.py
src/Layers/: LinearLayer.py  RandomAffineCouplingLayer.py  __init__.py
src/LossFunctions/: ActionCrossEntropy.py  ActionLoss.py  LpLoss.py  __init__.py
tests/: test_PhaseActivation.py  test_cmatmul.py  test_complex_autograd.py  test_crossvalidation.py
